done with mobile

--- a/about.html
+++ b/about.html
@@ -73,9 +73,14 @@
 
         <img src="images/basketball.jpeg" id = "grid" alt="photo of me playing basektball"></a>
         <img src="images/areeb-flynn.png" id = "grid" alt="photo of me and my friend flynn"></a>
-        <img src="assets/images/orbit_head.png"id = "grid" alt="cover art for orbit project"></a>
-        <img src="assets/images/misc_head.png" id = "grid" alt="cover art for misc design"></a>
-        <img id="roommatch-hide" src="assets/images/roommatch.png"id = "grid"  alt="cover art with roommatch pink circle logo"></a>
+        <img src="images/photoofsea.png"id = "grid" alt="photo of me with friends"></a>
+        <img src="images/vlogthumbnail.png" id = "grid" alt="photo of vlogs"></a>
+        <img src="images/meandbestfriend.png" id = "grid" alt="photo of me with my best friend!"></a>
+        <img src="images/linphoto.png" id = "grid" alt="me and my ktp lin"></a>
+        <img src="images/hawaii.JPG" id = "grid" alt="photo of me in hawaii with my cousin"></a>
+        <img src="images/ktp.png" id = "grid" alt="me and my org, ktp"></a>
+        <img src="images/runninginhawaii.png" id = "grid" alt="photo of me in hawaii running"></a>
+
     </div>
 </body>
 
