--- a/about.html
+++ b/about.html
@@ -70,7 +70,6 @@
         </div>
     </div>
     <div class="images_grid" id="grid-images">
-
         <img src="images/basketball.jpeg" id = "grid" alt="photo of me playing basektball"></a>
         <img src="images/areeb-flynn.png" id = "grid" alt="photo of me and my friend flynn"></a>
         <img src="images/photoofsea.png"id = "grid" alt="photo of me with friends"></a>
@@ -80,20 +79,15 @@
         <img src="images/hawaii.JPG" id = "grid" alt="photo of me in hawaii with my cousin"></a>
         <img src="images/ktp.png" id = "grid" alt="me and my org, ktp"></a>
         <img src="images/runninginhawaii.png" id = "grid" alt="photo of me in hawaii running"></a>
-
     </div>
 </body>
-
-  
-  </main>
-
 
     <footer>
     <nav>
         <ul id="footer">
-        <li><a href="#" class="current-page">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#" class="current-page">About</a></li>
         <li><a href="#">Contact</a></li>
         </ul>
     </nav>
