--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Areeb's Personal SI Portfolio Project Page</title>
   </head>
+  <a class = "skip" href="#main">Skip to Main Content</a>
   <nav role="navigation">
     <div id="menuToggle">
       
@@ -42,7 +43,6 @@
   </nav>
   
   <body>
-    <a class = "skip" href="#skip">Skip to Main Content</a>
 
     <div class="container">
       <div class="column">
