--- a/projects.html
+++ b/projects.html
@@ -5,12 +5,15 @@
     <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/starter.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>    
     <link rel = "stylesheet" type = "text/css" href = "css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.typekit.net/iet2lnm.css">    
     <title>Areeb's Personal SI Portfolio Project Page</title>
   </head>
+  <a class = "skip" href="#main">Skip to Main Content</a>
   <nav role="navigation">
     <div id="menuToggle">
       
@@ -42,76 +45,52 @@
   </nav>
   
   <body>
-    <a class = "skip" href="#skip">Skip to Main Content</a>
-
-    <div class="container">
+    <div class="container" id = "main">
       <div class="column">
-        <img src="your-image-url" alt="your-image-description">
+      <div class="content" id = "top">
+          <div class = "header-about">
+              <h1>About Me</h1>
+          </div>
+          <p>
+              Hi there! I'm a sophmore at The University of Michigan studying information (intended) with a minor in CS.
+              From creation to implementation, I’m drawn to the worlds of development and design because they enable me to make products of my own—allowing me to solve problems I face in my day to day life.
+              The combination of CS and UX allows me to develop with design in mind, and design with technicals in consideration.
+          </p>
+          <a class = "skip" href="#skip"> Skip to Main Content</a>
+      </div>
       </div>
       <div class="column">
-        <p>Your text goes here</p>
+      <img src="images/areeb.png" alt="hero image of website">
       </div>
-    </div> 
+  </div>
 
-  <main class="about" id="skip">
-    <h1>Super Slick Company</h1>
+  <h2 id = "gallery">Gallery</h2>
+    <div class="images_grid" id="grid-images">
+      <img src="images/basketball.jpeg" id = "grid" alt="photo of me playing basektball"></a>
+      <img src="images/areeb-flynn.png" id = "grid" alt="photo of me and my friend flynn"></a>
+      <img src="images/photoofsea.png"id = "grid" alt="photo of me with friends"></a>
+      <img src="images/vlogthumbnail.png" id = "grid" alt="photo of vlogs"></a>
+      <img src="images/meandbestfriend.png" id = "grid" alt="photo of me with my best friend!"></a>
+      <img src="images/linphoto.png" id = "grid" alt="me and my ktp lin"></a>
+      <img src="images/hawaii.JPG" id = "grid" alt="photo of me in hawaii with my cousin"></a>
+      <img src="images/ktp.png" id = "grid" alt="me and my org, ktp"></a>
+      <img src="images/runninginhawaii.png" id = "grid" alt="photo of me in hawaii running"></a>
+    </div>
+  </main>
 
-    <p>We're Super Slick Co. and we like to make all your stuff look like a million bucks. How? Through the power of creativity and trendiness! We sell out so you don't have to.</p>
-
-    <h2 id = "pricing">Pricing</h2>
-      <div class="pricing">
-        <div class="card">
-          <header><h3>$20</h3></header>
-          <ul>
-            <li><header><h4>"Pretty Cool" package</h4> </header></li>
-            <li>Your customers will dig it!</li>
-            <li>50 colors and patterns to pick from</li>
-          </ul>
-          <button>Buy $20 Package</button>
-        </div>
-        <div class="card">
-          <header><h3>$35</h3></header>
-          <ul>
-            <li><header><h4>"Very Cool" package</h4> </header></li>
-            <li>Your customers will be so hyped for your product!</li>
-            <li>150 colors and patterns to pick from</li>
-          </ul>
-          <button>Buy $35 Package</button>
-        </div>
-        <div class="card">
-          <header><h3>$50</h3></header>
-          <ul>
-            <li><header><h4>"Ultra Cool" package</h4> </header></li>
-            <li>You will be setting the trends!</li>
-            <li>500 colors and patterns to pick from</li>
-          </ul>
-          <button>Buy $50 Package</button>
-        </div>
-      </div>
-
-      <h2 id = "gallery">Gallery</h2>
-        <div class="gallery"> 
-          <img id="image1" src="images/sample.jpg" alt="Blackboard with text that says 'Cool'" />
-          <img id="image2" src="images/logo.png" alt="Super Slick brand logo" />
-          <img id="image3" src="images/sample.jpg" alt="Blackboard with text that says 'Cool'" />
-          <img id="image4" src="images/logo.png" alt="Super Slick brand logo" />
-          <img id="image5" src="images/sample.jpg" alt="Blackboard with text that says 'Cool'" />
-        </div>
-      </main>
-
-      <footer>
-        <nav>
-          <ul id="footer">
-            <li><a href="#" class="current-page">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="logo">
-          <a href="#"><img src="images/personallogo.png" alt="Logo"></a>
-        </div>      
-      </footer>
+  <footer>
+    <nav>
+      <ul id="footer">
+        <li><a href="#">Home</a></li>
+        <li><a href="#" class="current-page"> Projects</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <div class="logo">
+    <a href="#"><img src="images/personallogo.png" alt="Logo"></a>
+  </div>    
+  </footer>
     
     </body>
 </html>
