--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <span></span>
       
       <ul id="menu">
-        <a href="#"><li>Home</li></a>
-        <a href="#"><li>Projects</li></a>
-        <a href="#"><li>About</li></a>
-        <a href="#"><li>Contact</li></a>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div id="deskToggle">
@@ -43,30 +43,24 @@
   
   <body>  
 
-  <div class="container" id = "main">
-    <div class="column">
-      <div class="content">
-        <h1>My Header</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lobortis purus. Fusce quis risus eget tellus tristique tristique eu eget eros.</p>
-        <button>My Button</button>
+    <div class="page-header">
+      <img src="images/personallogo.png" alt="Logo Icon for areeb">
+      <div class="intro-box">
+        <h1>Areeb Khan</h1>
+        <p>Welcome to my personal website</p>
       </div>
     </div>
-    <div class="column">
-      <img src="your-image-url" alt="hero image of website">
-    </div>
-  </div>
-  
 
   </body>
   <footer>
     <nav>
       <ul id="footer">
-        <li><a href="#" class="current-page">Home</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li id="footer-home"><a href="index.html">Home</a></li>
+        <li id="footer-projects"><a href="projects.html">Projects</a></li>
+        <li id="footer-about"><a href="about.html">About</a></li>
+        <li id="footer-contact"><a href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+    </nav>    
     <div class="logo">
     <a href="#"><img src="images/personallogo.png" alt="Logo"></a>
   </div>    
