--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <title>Areeb's Personal SI Portfolio Project Page</title>
   </head>
   <a class = "skip" href="#main">Skip to Main Content</a>
-  <nav role="navigation">
+  <nav role="navigation"> 
     <div id="menuToggle">
       
       <input type="checkbox" />
@@ -24,11 +24,10 @@
       <span></span>
       
       <ul id="menu">
-        <a href="#"><li>Home</li></a>
-        <a href="#"><li>Projects</li></a>
-        <a href="#"><li>About</li></a>
-        <a href="#"><li>Contact</li></a>
-        <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div id="deskToggle">
@@ -49,44 +48,47 @@
       <div class="column">
       <div class="content" id = "top">
           <div class = "header-about">
-              <h1>About Me</h1>
+              <h1>View my projects</h1>
           </div>
           <p>
-              Hi there! I'm a sophmore at The University of Michigan studying information (intended) with a minor in CS.
-              From creation to implementation, I’m drawn to the worlds of development and design because they enable me to make products of my own—allowing me to solve problems I face in my day to day life.
-              The combination of CS and UX allows me to develop with design in mind, and design with technicals in consideration.
+            Currently studying CS, UX, and Math, working on product projects,  
+            web apps used by +100,000 consumers, and making videos for fun. I'm
+            the head of product at a startup called Hyperfan, we're building the 
+            future of creator tools. Take a look at some of my projects below! Msg
+            me for more information about them.        
           </p>
-          <a class = "skip" href="#skip"> Skip to Main Content</a>
       </div>
       </div>
       <div class="column">
-      <img src="images/areeb.png" alt="hero image of website">
+      <img src="images/Photoofnames.png" alt="hero image of my name on graphics">
       </div>
   </div>
-
-  <h2 id = "gallery">Gallery</h2>
+  <div class="projects_div_index" tabindex="0">
+    <div class="projhead">
+        <h1 class="hidden show" id="proj_header">Project Gallery</h1>
+    </div>
+  </div>
+  <h2 id = "gallery"></h2>
     <div class="images_grid" id="grid-images">
-      <img src="images/basketball.jpeg" id = "grid" alt="photo of me playing basektball"></a>
-      <img src="images/areeb-flynn.png" id = "grid" alt="photo of me and my friend flynn"></a>
-      <img src="images/photoofsea.png"id = "grid" alt="photo of me with friends"></a>
-      <img src="images/vlogthumbnail.png" id = "grid" alt="photo of vlogs"></a>
-      <img src="images/meandbestfriend.png" id = "grid" alt="photo of me with my best friend!"></a>
-      <img src="images/linphoto.png" id = "grid" alt="me and my ktp lin"></a>
-      <img src="images/hawaii.JPG" id = "grid" alt="photo of me in hawaii with my cousin"></a>
-      <img src="images/ktp.png" id = "grid" alt="me and my org, ktp"></a>
-      <img src="images/runninginhawaii.png" id = "grid" alt="photo of me in hawaii running"></a>
+      <img src="images/onward.png" id = "grid" alt="my startup onward"></a>
+      <img src="images/soulmynt.png" id = "grid" alt="a startup i was a consultant for"></a>
+      <img src="images/gct.png"id = "grid" alt="a startup i made during quarentine"></a>
+      <img src="images/ktp.png" id = "grid" alt="the tech frat im a part of"></a>
+      <img src="images/candls.png" id = "grid" alt="temporary trading algorithms i created"></a>
+      <img src="images/luxurybox.png" id = "grid" alt="a shoe store i consulted for"></a>
+      <img src="images/honestpower1.png" id = "grid" alt="a startup i worked at"></a>
     </div>
   </main>
 
   <footer>
     <nav>
       <ul id="footer">
-        <li><a href="#">Home</a></li>
-        <li><a href="#" class="current-page"> Projects</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li id="footer-home"><a href="index.html">Home</a></li>
+        <li id="footer-projects"><a href="projects.html">Projects</a></li>
+        <li id="footer-about"><a href="about.html">About</a></li>
+        <li id="footer-contact"><a href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+    </nav>   
     <div class="logo">
     <a href="#"><img src="images/personallogo.png" alt="Logo"></a>
   </div>    
