--- a/about.html
+++ b/about.html
@@ -25,12 +25,11 @@
         <span></span>
         
         <ul id="menu">
-            <a href="#"><li>Home</li></a>
-            <a href="#"><li>Projects</li></a>
-            <a href="#"><li>About</li></a>
-            <a href="#"><li>Contact</li></a>
-            <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
-        </ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
         <div id="deskToggle">
         <div class="logo">
