--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" type="image/png" href="images/logo_icon.png"/>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
-    <link rel="stylesheet" type="text/css" href="css/starter.css">
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>    
     <link rel = "stylesheet" type = "text/css" href = "css/index.css">
@@ -22,11 +22,10 @@
       <span></span>
       
       <ul id="menu">
-        <a href="#"><li>Home</li></a>
-        <a href="#"><li>Projects</li></a>
-        <a href="#"><li>About</li></a>
-        <a href="#"><li>Contact</li></a>
-        <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
     <div id="deskToggle">
@@ -42,76 +41,29 @@
   </div>
   </nav>
   
-  <body>
+  <body>  
 
-    <div class="container">
-      <div class="column">
-        <img src="your-image-url" alt="your-image-description">
-      </div>
-      <div class="column">
-        <p>Your text goes here</p>
-      </div>
-    </div>    
-
-  <main class="about" id="skip">
-    <h1>Super Slick Company</h1>
-
-    <p>We're Super Slick Co. and we like to make all your stuff look like a million bucks. How? Through the power of creativity and trendiness! We sell out so you don't have to.</p>
-
-    <h2 id = "pricing">Pricing</h2>
-      <div class="pricing">
-        <div class="card">
-          <header><h3>$20</h3></header>
-          <ul>
-            <li><header><h4>"Pretty Cool" package</h4> </header></li>
-            <li>Your customers will dig it!</li>
-            <li>50 colors and patterns to pick from</li>
-          </ul>
-          <button>Buy $20 Package</button>
-        </div>
-        <div class="card">
-          <header><h3>$35</h3></header>
-          <ul>
-            <li><header><h4>"Very Cool" package</h4> </header></li>
-            <li>Your customers will be so hyped for your product!</li>
-            <li>150 colors and patterns to pick from</li>
-          </ul>
-          <button>Buy $35 Package</button>
-        </div>
-        <div class="card">
-          <header><h3>$50</h3></header>
-          <ul>
-            <li><header><h4>"Ultra Cool" package</h4> </header></li>
-            <li>You will be setting the trends!</li>
-            <li>500 colors and patterns to pick from</li>
-          </ul>
-          <button>Buy $50 Package</button>
-        </div>
-      </div>
-
-      <h2 id = "gallery">Gallery</h2>
-        <div class="gallery"> 
-          <img id="image1" src="images/sample.jpg" alt="Blackboard with text that says 'Cool'" />
-          <img id="image2" src="images/logo.png" alt="Super Slick brand logo" />
-          <img id="image3" src="images/sample.jpg" alt="Blackboard with text that says 'Cool'" />
-          <img id="image4" src="images/logo.png" alt="Super Slick brand logo" />
-          <img id="image5" src="images/sample.jpg" alt="Blackboard with text that says 'Cool'" />
-        </div>
-      </main>
+    <div class="contact-container">
+      <h2>Contact Areeb</h2>
+      <p>Phone: 623-745-6654</p>
+      <p>Email: <a href="mailto:areebk@umich.edu">areebk@umich.edu</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/akhan21//" target="_blank">Areeb's LinkedIn</a></p>
+    </div>
+  
+    </body>
 
       <footer>
         <nav>
           <ul id="footer">
-            <li><a href="#" class="current-page">Home</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
+            <li id="footer-home"><a href="index.html">Home</a></li>
+            <li id="footer-projects"><a href="projects.html">Projects</a></li>
+            <li id="footer-about"><a href="about.html">About</a></li>
+            <li id="footer-contact"><a href="contact.html">Contact</a></li>
           </ul>
-        </nav>
+        </nav>   
         <div class="logo">
           <a href="#"><img src="images/personallogo.png" alt="Logo"></a>
         </div>      
       </footer>
     
-    </body>
 </html>
