--- a/about.html
+++ b/about.html
@@ -13,12 +13,12 @@
     <link rel="stylesheet" href="https://use.typekit.net/iet2lnm.css">
     <title>Areeb's Personal SI Portfolio About</title>
   </head>
-  <a class = "skip" href="#main">Skip to Main Content</a>
+  <a class = "skip" href="#top">Skip to Main Content</a>
 
     <nav role="navigation">
         <div id="menuToggle">
         
-        <input type="checkbox" />
+            <input type="checkbox" aria-label="Toggle menu" />
         
         <span></span>
         <span></span>
@@ -35,7 +35,7 @@
         <div class="logo">
             <a href="index.html"><img src="images/personallogo.png" alt="Logo"></a>
         </div>      
-        <ul id="menu">
+        <ul id="menu2">
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="about.html" class="current-page">About</a></li>
@@ -56,7 +56,6 @@
                 From creation to implementation, I’m drawn to the worlds of development and design because they enable me to make products of my own—allowing me to solve problems I face in my day to day life.
                 The combination of CS and UX allows me to develop with design in mind, and design with technicals in consideration.
             </p>
-            <a class = "skip" href="#skip"> Skip to Main Content</a>
         </div>
         </div>
         <div class="column">
@@ -69,15 +68,15 @@
         </div>
     </div>
     <div class="images_grid" id="grid-images">
-        <img src="images/basketball.jpeg" id = "grid" alt="photo of me playing basektball"></a>
-        <img src="images/areeb-flynn.png" id = "grid" alt="photo of me and my friend flynn"></a>
-        <img src="images/photoofsea.png"id = "grid" alt="photo of me with friends"></a>
-        <img src="images/vlogthumbnail.png" id = "grid" alt="photo of vlogs"></a>
-        <img src="images/meandbestfriend.png" id = "grid" alt="photo of me with my best friend!"></a>
-        <img src="images/linphoto.png" id = "grid" alt="me and my ktp lin"></a>
-        <img src="images/hawaii.JPG" id = "grid" alt="photo of me in hawaii with my cousin"></a>
-        <img src="images/ktp.png" id = "grid" alt="me and my org, ktp"></a>
-        <img src="images/runninginhawaii.png" id = "grid" alt="photo of me in hawaii running"></a>
+        <img src="images/basketball.jpeg" id = "grid1" alt="photo of me playing basektball"></a>
+        <img src="images/areeb-flynn.png" id = "grid2" alt="photo of me and my friend flynn"></a>
+        <img src="images/photoofsea.png"id = "grid3" alt="photo of me with friends"></a>
+        <img src="images/vlogthumbnail.png" id = "grid4" alt="photo of vlogs"></a>
+        <img src="images/meandbestfriend.png" id = "grid5" alt="photo of me with my best friend!"></a>
+        <img src="images/linphoto.png" id = "grid6" alt="me and my ktp lin"></a>
+        <img src="images/hawaii.JPG" id = "grid7" alt="photo of me in hawaii with my cousin"></a>
+        <img src="images/ktp.png" id = "grid8" alt="me and my org, ktp"></a>
+        <img src="images/runninginhawaii.png" id = "grid9" alt="photo of me in hawaii running"></a>
     </div>
 </body>
 
