--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav role="navigation">
     <div id="menuToggle">
       
-      <input type="checkbox" />
+      <input type="checkbox" aria-label="Toggle menu" />
      
       <span></span>
       <span></span>
@@ -28,11 +28,12 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
+</nav>
     <div id="deskToggle">
       <div class="logo">
         <a href="index.html"><img src="images/personallogo.png" alt="Logo"></a>
       </div>      
-      <ul id="menu">
+      <ul id="menu2">
         <li><a href="index.html" class="current-page">Home</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="about.html">About</a></li>
@@ -43,7 +44,7 @@
   
   <body>  
 
-    <div class="page-header">
+    <div class="page-header" id = "main">
       <img src="images/personallogo.png" alt="Logo Icon for areeb">
       <div class="intro-box">
         <h1>Areeb Khan</h1>
