--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
   <nav role="navigation"> 
     <div id="menuToggle">
       
-      <input type="checkbox" />
+      <input type="checkbox" aria-label="Toggle menu" />
      
       <span></span>
       <span></span>
@@ -68,7 +68,6 @@
         <h1 class="hidden show" id="proj_header">Project Gallery</h1>
     </div>
   </div>
-  <h2 id = "gallery"></h2>
     <div class="images_grid" id="grid-images">
       <img src="images/onward.png" id = "grid" alt="my startup onward"></a>
       <img src="images/soulmynt.png" id = "grid" alt="a startup i was a consultant for"></a>
